fix drawer close button z-index

--- a/src/components/drawer/drawer.module.scss
+++ b/src/components/drawer/drawer.module.scss
@@ -32,6 +32,7 @@
     position: fixed;
     right: 2rem;
     top: 2rem;
+    z-index: 1;
   }
 
   &--open {
